--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -40,14 +40,47 @@
 /* First tab in the main app interface. */
 "activityCenter.promo.favorites" = "Confira o novo recurso Favoritos!";
 
+/* Menu option for adding generic file */
+"add.media.option.document" = "Documento";
+
 /* Text label for action button to add the contact to the address book */
 "add.to.contact.book" = "Adicionar Contato";
+
+/* Text for the action of adding a contact to the user's favorites list (title case). */
+"add.to.favorites.title" = "Adicionar aos favoritos";
+
+/* Confirmation when a user was successfully added to favorites. */
+"added.user.to.favorites" = "Adicionado %@ aos favoritos";
 
 /* Title for alert shown when there's no internet connectivity */
 "alert.no.internet.title" = "Sem ligação à internet";
 
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Por favor, verifique se você tem ligação à internet, e tente novamente.";
+
+/* Title of the activity tab when contacts permissions aren't given. */
+"allow.contacts.for.activity" = "Para receber atualizações de seus amigos, permita o acesso aos contatos.";
+
+/* Title of the chats tab when contacts permissions aren't given. */
+"allow.contacts.for.chat" = "Para começar a conversar, permita o acesso aos contatos";
+
+/* Message used in the app to explain the need for contacts permission. */
+"allow.contacts.permission.message" = "HalloApp precisa de acesso aos contatos do seu telefone apenas para conectá-lo com seus amigos e familiares. O HalloApp nunca envia mensagens a ninguém em seu nome.";
+
+/* Displayed in the sticky header that's on the feed when the user has not given contacts access. */
+"allow.contacts.permission.posts.prompt" = "Para se conectar com seus amigos e familiares e ver suas postagens, permita que o HalloApp acesse seus contatos.";
+
+/* Title of the container that explains the need for contacts permission. */
+"allow.contacts.permission.title.numbered" = "1. Permitir contatos";
+
+/* Title of a button that opens the settings app. */
+"allow.in.settings.title" = "Permitir nas configurações";
+
+/* Message used in the app to explain the need for notifications permission. */
+"allow.notifications.permission.message" = "Permita notificações do HalloApp para não perder mensagens, chamadas e postar atualizações de seus amigos.";
+
+/* Title of the container that explains the need for notifications permission. */
+"allow.notifications.permission.title.numbered" = "2. Permitir notificações";
 
 /* Title of view where users can invite friends and family. */
 "app.ios.invite.friends" = "Convidar amigos e família";
@@ -438,6 +471,9 @@
 
 /* Message text shown for the message that was deleted */
 "chat.message.deleted" = "Esta mensagem foi apagada.";
+
+/* Message text shown in a message that has document but no text */
+"chat.message.document" = "Arquivo";
 
 /* Message text shown in a message that have photo media but no text */
 "chat.message.photo" = "Foto";
@@ -1397,6 +1433,9 @@
 /* New moment screenshot notification text to be shown to the user. */
 "notification.moment.screenshot" = "%@ tirou uma captura de tela do seu momento";
 
+/* New post notification text when post is multiple documents without caption. */
+"notification.n.documents" = "notificação.n.documentos";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notificação.n.fotos";
 
@@ -1417,6 +1456,9 @@
 
 /* Title for the new feed post notification. */
 "notification.new.post" = "Nova publicaçāo";
+
+/* New post notification text when post is one document without caption. */
+"notification.one.document" = "📄 arquivo";
 
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "📷 foto";
@@ -1540,6 +1582,9 @@
 
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.feeds" = "Feeds";
+
+/* Header when selecting destinations to forward a message, this header appears above the feeds section */
+"post.privacy.header.frequentlyContacted" = "Frequentemente contatado";
 
 /* Header when selecting a group to share with
    Header when selecting destinations to forward a message, this header appears above the groups section */
@@ -1734,6 +1779,12 @@
 
 /* Message shown to the user once they have successfully registered. */
 "registration.you.are.in" = "Você está dentro!";
+
+/* Text for the action of removing a contact from the user's favorites list (title case). */
+"remove.from.favorites.title" = "Remover dos favoritos";
+
+/* Confirmation when a user was successfully removed from favorites. */
+"removed.user.from.favorites" = "Removido %@ dos favoritos";
 
 /* Instructions for how to use the safety number verification UI */
 "safety.number.instructions" = "Para verificar a segurança da sua ligação com %@, confira se os números acima correspondem aos mostrados no dispositivo da pessoa, ou escaneie o seu código QR no telefone da pessoa.";
@@ -2029,6 +2080,9 @@
 /* Row in Settings screen */
 "title.storage" = "Armazenamento";
 
+/* Title for the screen with information about who saw your moment. */
+"title.your.moment" = "Visto por";
+
 /* Title for the screen with information about who reacted to your post.
    Title for the screen with information about who saw your post. */
 "title.your.post" = "Visto por";
@@ -2050,6 +2104,12 @@
 
 /* Text that indicates the unlock action for a moment. */
 "unlock.title" = "Desbloquear";
+
+/* Body for alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed.message" = "Esta postagem pode ter expirado, sido excluída ou outra coisa.";
+
+/* Title for alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed.title" = "A postagem não está mais disponível";
 
 /* Button to confirm blocking user via profile page */
 "user.block" = "Bloquear";
@@ -2083,6 +2143,9 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "VÍDEO";
+
+/* Title of a button that navigates to a user's profile. */
+"view.profile" = "Ver perfil";
 
 /* Text that indicates a view action. */
 "view.title" = "Visualizar";
