--- a/Halloapp/pt.lproj/Localizable.stringsdict
+++ b/Halloapp/pt.lproj/Localizable.stringsdict
@@ -265,7 +265,7 @@
 	<key>notification.n.documents</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@num_documents@</string>
+		<string>%#@num_documentos@</string>
 		<key>num_documents</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -273,9 +273,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>📄 %d file</string>
+			<string>📄 %d arquivo</string>
 			<key>other</key>
-			<string>📄 %d files</string>
+			<string>📄 %d arquivos</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
