--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -1018,6 +1018,90 @@
 /* Label shown above group members list */
 "group.members.label" = "اعضا";
 
+/* Notification that a user changed a groups avatar */
+"group.notification.changeAvatar" = "<$sender$> عکس گروه <$groupname$> را عوض کرد";
+
+/* Notification that you changed a groups avatar */
+"group.notification.changeAvatar.you" = "شما عکس گروه <$groupname$> را عوض کردید";
+
+/* Notification that a user changed a groups description */
+"group.notification.changeDescription" = "<$sender$> توضیحات گروه <$groupname$> را عوض کرد";
+
+/* Notification that you changed a groups description */
+"group.notification.changeDescription.you" = "شما توضیحات گروه <$groupname$> را عوض کردید";
+
+/* Notification that a user changed a group's expiration */
+"group.notification.changeExpiry" = "<$sender$> تاریخ انقضای گروه <$groupname$> را به @1% تغییر داد";
+
+/* Notification that you changed a group's expiration */
+"group.notification.changeExpiry.you" = "شما تاریخ انقضای گروه <$groupname$> را به @1% تغییر دادید";
+
+/* Notification that a user changed a groups name */
+"group.notification.changeName" = "<$sender$> نام گروه <$groupname$> را عوض کرد";
+
+/* Notification that you changed a groups name */
+"group.notification.changeName.you" = "شما نام گروه <$groupname$> را عوض کردید";
+
+/* Notification that a user created a group */
+"group.notification.created" = "<$sender$> گروه <$groupname$> را ایجاد کرد";
+
+/* Notification that you created a group */
+"group.notification.created.you" = "شما گروه <$groupname$> را ایجاد کردید";
+
+/* Notification that a user joined a group */
+"group.notification.join" = "<$sender$> به گروه <$groupname$> از طریق لینک دعوت پیوست";
+
+/* Notification that you joined a group */
+"group.notification.join.you" = "شما به گروه <$groupname$> از طریق لینک دعوت پیوستید";
+
+/* Notification that a user added a group member */
+"group.notification.memberaction.add" = "<$sender$> عضو <$member$> را به گروه <$groupname$> دعوت کرد";
+
+/* Notification that a user added a group member */
+"group.notification.memberaction.add.you.member" = "<$sender$> شما را به گروه <$groupname$> دعوت کرد";
+
+/* Notification that you added a group member */
+"group.notification.memberaction.add.you.sender" = "شما <$member$> را به گروه <$groupname$> دعوت کردید";
+
+/* Notification that a user demmoted a group member */
+"group.notification.memberaction.demote" = "<$sender$> مدیر گروه <$member$> را از گروه <$groupname$> حذف کرد";
+
+/* Notification that a user demmoted you */
+"group.notification.memberaction.demote.you.member" = "<$sender$> شما را از مدیریت گروه <$groupname$> حذف کرد";
+
+/* Notification that you demmoted a group member */
+"group.notification.memberaction.demote.you.sender" = "شما مدیر گروه <$member$> را از گروه <$groupname$> حذف کردید";
+
+/* Notification that a user left a group */
+"group.notification.memberaction.leave" = "<$member$> گروه <$groupname$> را ترک کرد";
+
+/* Notification that you left a group */
+"group.notification.memberaction.leave.you" = "شما گروه <$groupname$> را ترک کردید";
+
+/* Notification that a user promoted a group member */
+"group.notification.memberaction.promote" = "<$sender$> عضو <$member$> را مدیر گروه <$groupname$> کرد";
+
+/* Notification that you promoted a group member */
+"group.notification.memberaction.promote.you.member" = "<$sender$> شما را مدیر گروه <$groupname$> کرد";
+
+/* Notification that you promoted a group member */
+"group.notification.memberaction.promote.you.sender" = "شما <$member$> را مدیر گروه <$groupname$> کردید";
+
+/* Notification that a user removed a group member */
+"group.notification.memberaction.remove" = "<$sender$> عضو <$member$> را از گروه <$groupname$> حذف کرد";
+
+/* Notification that a user added a group member */
+"group.notification.memberaction.remove.you.member" = "<$sender$> شما را از گروه <$groupname$> حذف کرد";
+
+/* Notification that you removed a group member */
+"group.notification.memberaction.remove.you.sender" = "شما <$member$> را از گروه <$groupname$> حذف کردید";
+
+/* Notification that a user changed a groups background */
+"group.notification.setBackground" = "<$sender$> رنگ پیش‌زمینه گروه <$groupname$> را تغییر داد";
+
+/* Notification that you changed a groups background */
+"group.notification.setBackground.you" = "شما رنگ پیش‌زمینه گروه <$groupname$> را تغییر دادید";
+
 /* Text for alert box when the user clicks on an invalid group invite link */
 "group.preview.get.info.error.invalid.link" = "لینک گروه اعتبار ندارد";
 
