--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -1018,6 +1018,90 @@
 /* Label shown above group members list */
 "group.members.label" = "Deelnemers";
 
+/* Notification that a user changed a groups avatar */
+"group.notification.changeAvatar" = "<$sender$> heeft de afbeelding van de groep <$groupname$> gewijzigd";
+
+/* Notification that you changed a groups avatar */
+"group.notification.changeAvatar.you" = "Je hebt de afbeelding van de groep <$groupname$> gewijzigd";
+
+/* Notification that a user changed a groups description */
+"group.notification.changeDescription" = "<$sender$> heeft de omschrijving van de groep <$groupname$> gewijzigd";
+
+/* Notification that you changed a groups description */
+"group.notification.changeDescription.you" = "Je hebt de omschrijving van de groep <$groupname$> gewijzigd";
+
+/* Notification that a user changed a group's expiration */
+"group.notification.changeExpiry" = "<$sender$> heeft de verlooptijd van de groep <$groupname$> gewijzigd naar %1@";
+
+/* Notification that you changed a group's expiration */
+"group.notification.changeExpiry.you" = "Je hebt de verlooptijd van de groep $groupname$> gewijzigd naar %1@";
+
+/* Notification that a user changed a groups name */
+"group.notification.changeName" = "<$sender$> heeft de naam van een groep gewijzigd in <$groupname$>";
+
+/* Notification that you changed a groups name */
+"group.notification.changeName.you" = "Je hebt de naam van een groep gewijzigd in <$groupname$>";
+
+/* Notification that a user created a group */
+"group.notification.created" = "<$sender$> heeft de groep <$groupname$> aangemaakt";
+
+/* Notification that you created a group */
+"group.notification.created.you" = "Je hebt de groep <$groupname$> aangemaakt";
+
+/* Notification that a user joined a group */
+"group.notification.join" = "<$sender$> neemt deel aan de groep <$groupname$> via een Uitnodigingslink";
+
+/* Notification that you joined a group */
+"group.notification.join.you" = "Je neemt deel aan de groep <$groupname$> via een Uitnodigingslink";
+
+/* Notification that a user added a group member */
+"group.notification.memberaction.add" = "<$sender$> heeft <$member$> toegevoegd aan de groep <$groupname$>";
+
+/* Notification that a user added a group member */
+"group.notification.memberaction.add.you.member" = "<$sender$> heeft je toegevoegd aan de groep <$groupname$>";
+
+/* Notification that you added a group member */
+"group.notification.memberaction.add.you.sender" = "Je hebt <$member$> toegevoegd aan de groep <$groupname$>";
+
+/* Notification that a user demmoted a group member */
+"group.notification.memberaction.demote" = "<$sender$> heeft <$member$> als beheerder verwijderd van de groep <$groupname$>";
+
+/* Notification that a user demmoted you */
+"group.notification.memberaction.demote.you.member" = "<$sender$> heeft je als beheerder verwijderd van de groep <$groupname$>";
+
+/* Notification that you demmoted a group member */
+"group.notification.memberaction.demote.you.sender" = "Je hebt <$member$> als beheerder verwijderd van de groep <$groupname$>";
+
+/* Notification that a user left a group */
+"group.notification.memberaction.leave" = "<$sender$> heeft de groep <$groupname$> verlaten";
+
+/* Notification that you left a group */
+"group.notification.memberaction.leave.you" = "Je hebt de groep <$groupname$> verlaten";
+
+/* Notification that a user promoted a group member */
+"group.notification.memberaction.promote" = "<$sender$> heeft <$member$> beheerder van de groep <$groupname$> gemaakt";
+
+/* Notification that you promoted a group member */
+"group.notification.memberaction.promote.you.member" = "<$sender$> heeft je beheerder van de groep <$groupname$> gemaakt";
+
+/* Notification that you promoted a group member */
+"group.notification.memberaction.promote.you.sender" = "Je hebt <$member$> beheerder van de groep <$groupname$> gemaakt";
+
+/* Notification that a user removed a group member */
+"group.notification.memberaction.remove" = "<$sender$> heeft <$member$> uit de groep <$groupname$> verwijderd";
+
+/* Notification that a user added a group member */
+"group.notification.memberaction.remove.you.member" = "<$sender$> heeft je uit de groep <$groupname$> verwijderd";
+
+/* Notification that you removed a group member */
+"group.notification.memberaction.remove.you.sender" = "Je hebt <$member$> uit de groep <$groupname$> verwijderd";
+
+/* Notification that a user changed a groups background */
+"group.notification.setBackground" = "<$sender$> heeft de achtergrondkleur van de groep <$groupname$> gewijzigd";
+
+/* Notification that you changed a groups background */
+"group.notification.setBackground.you" = "Je hebt de achtergrondkleur van de groep <$groupname$> gewijzigd";
+
 /* Text for alert box when the user clicks on an invalid group invite link */
 "group.preview.get.info.error.invalid.link" = "De uitnodigingslink voor de groep is ongeldig";
 
