--- a/Notification Service Extension/de.lproj/Localizable.strings
+++ b/Notification Service Extension/de.lproj/Localizable.strings
@@ -193,6 +193,9 @@
 /* Title for the new feed post notification. */
 "notification.new.post" = "Neuer Beitrag";
 
+/* New post notification text when post is one document without caption. */
+"notification.one.document" = "📄 Datei";
+
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "📷 Foto";
 
